<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">


        <android.support.v7.widget.CardView


            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_margin="5dp"
            android:layout_marginEnd="1dp"
            card_view:cardBackgroundColor="#D50000"
            card_view:cardCornerRadius="4dp"
            android:id="@+id/cardView5">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_1"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="1dp"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="visible" />
            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_1a"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="visible" />


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView


            android:layout_width="180dp"
            android:layout_height="75dp"
            android:layout_marginStart="2dp"
            card_view:cardBackgroundColor="#2962FF"
            card_view:cardCornerRadius="4dp"
            android:layout_marginTop="21dp"
            android:id="@+id/cardView6"
            android:layout_below="@+id/cardView5"
            android:layout_alignStart="@+id/cardView4">
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_2"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="visible" />


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView


            android:layout_width="180dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            card_view:cardBackgroundColor="#2962FF"
            card_view:cardCornerRadius="4dp"
            android:id="@+id/cardView4"
            android:layout_below="@+id/cardView6"
            android:layout_alignStart="@+id/cardView5">
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_3"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="visible" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView


            android:layout_width="150dp"
            android:layout_height="160dp"
            android:layout_marginTop="10dp"
            card_view:cardBackgroundColor="#2962FF"
            card_view:cardCornerRadius="4dp"
            android:id="@+id/cardView1"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/cardView6"
            android:layout_marginStart="14dp">
            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_4"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="visible" />

    </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView


            android:layout_width="match_parent"
            android:layout_height="140dp"
            card_view:cardBackgroundColor="#2962FF"
            card_view:cardCornerRadius="4dp"
            android:id="@+id/cardView8"
            android:layout_below="@+id/cardView4"
            android:layout_alignStart="@+id/cardView4"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp">
            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_5"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="100dp"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />
    </android.support.v7.widget.CardView>


</RelativeLayout>









